Fix for bug #4492. TIMESTAMP columns should be unsigned to preserve compatibility with 4.0 (Or else InnoDB will return different internal TIMESTAMP values when user upgrades to 4.1).

Altough this fix will introduce problems with early 4.1 -> 4.1 upgrades (tables with 
TIMESTAMP field should be reloaded using mysqldump) it will allow easy 4.0 -> 4.1 
upgrade (which is more important since 4.1 is still beta).


mysql-test/r/metadata.result:
  TIMESTAMP should be UNSIGNED as in 4.0.
mysql-test/r/ps_2myisam.result:
  TIMESTAMP should be UNSIGNED as in 4.0.
mysql-test/r/ps_3innodb.result:
  TIMESTAMP should be UNSIGNED as in 4.0.
mysql-test/r/ps_4heap.result:
  TIMESTAMP should be UNSIGNED as in 4.0.
mysql-test/r/ps_5merge.result:
  TIMESTAMP should be UNSIGNED as in 4.0.
sql/field.cc:
  TIMESTAMP should be UNSIGNED to preserve compatiblity with 4.0.
  (Or else InnoDB will return different internal TIMESTAMP values when user upgrades to 4.1).